Atualização das paginas em geral CSS- HTML e a colocação de tag figure

--- a/paginas/PaginaInicial.html
+++ b/paginas/PaginaInicial.html
@@ -2,26 +2,23 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viwerport" content="width=device-width, initial-scale=1">
+    <meta name="viwerport" content="width=device-width, initial-scale=1"type="text/css">
+    <link rel="stylesheet" href="../Css/PaginaInicial.css">
     <title>::INICIAL::</title>
   </head>
+
   <body>
     <div id="Container">
-
-        <h1>Página :: INICIAL ::</h1>
-        <div>
-
-          <h2>Lista de Cursos</h2>
-          <ul>
-
-            <li><a href="cursos/Java/curso-Java.html">Java</a></li>
-            <li><a href="cursos/Csharp/curso-Csharp.html">C#</a></li>
-            <li><a href="cursos/Python/curso-Python.html">Python</a></li>
-            <li><a href="cursos/Ruby/curso-Ruby.html">Ruby</a></li>
-
-          </ul>
-        </div>
-
+      <h1>Página :: INICIAL ::</h1>
+      <div>
+        <h2>Lista de Cursos</h2>
+        <ul class="LinksPaginas">
+          <li><a href="cursos/Java/curso-Java.html">Java</a></li>
+          <li><a href="cursos/Csharp/curso-Csharp.html">C#</a></li>
+          <li><a href="cursos/Python/curso-Python.html">Python</a></li>
+          <li><a href="cursos/Ruby/curso-Ruby.html">Ruby</a></li>
+        </ul>
+      </div>
     </div>
   </body>
 </html>
