--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viwerport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../../../Css/CSharp.css"type="text/css">
     <title>::C#::</title>
   </head>
   <body>
@@ -20,8 +21,20 @@
             <li><a href="../../cursos/Ruby/curso-Ruby.html">Ruby</a></li>
 
           </ul>
+          <figure>
+            <img src="../../../Imagens/c-sharp.png" alt="Icone da linguagem de Programaçoa CSharp">
+            <figcaption>Historia do C#</figcaption>
+          </figure>
         </div>
 
     </div>
   </body>
 </html>
+
+
+/*
+5 - Nas páginas dos cursos logo abaixo da div do menu deve ser inserida uma tag figure onde deve conter os seguintes elementos:
+    a - img : Marque este elemento com um id referente ao curso, Ex: id="imgJava". Este elemento deve conter uma imagem relativa ao curso em questão, utilize o arquivo de css para inserir alterações de tamanho neste elemento, lembre se que tudo deve ser responsivo.
+    b - figCaption : Marque este elemento com um id referente ao curso , Ex id="histJava". Este elemento deve conter um texto breve sobre o curso.
+
+*/
