--- a/paginas/cursos/Java/curso-Java.html
+++ b/paginas/cursos/Java/curso-Java.html
@@ -3,13 +3,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viwerport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../../../Css/Java.css"type="text/css">
     <title>::JAVA::</title>
   </head>
   <body>
     <div id="Container">
 
         <h1>Página :: JAVA ::</h1>
-        <div >
+        <div>
 
           <h2>Lista de Cursos</h2>
           <ul>
@@ -18,10 +19,11 @@
             <li><a href="../../cursos/Csharp/curso-Csharp.html">C#</a></li>
             <li><a href="../../cursos/Python/curso-Python.html">Python</a></li>
             <li><a href="../../cursos/Ruby/curso-Ruby.html">Ruby</a></li>
-
-          </ul>
+            <div class="Imagemjava">
+              <img src="../../../Imagens/Java.png" alt="Ícones feitos por https://www.flaticon.com/br/autores/pixelmeetup">
+            </div>
+        </ul>
         </div>
-
     </div>
   </body>
 </html>
