--- a/paginas/cursos/Ruby/curso-Ruby.html
+++ b/paginas/cursos/Ruby/curso-Ruby.html
@@ -2,7 +2,8 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viwerport" content="width=device-width, initial-scale=1">
+    <meta name="viwerport" content="width=device-width, initial-scale=1"type="text/css">
+    <link rel="stylesheet" href="../../../Css/Ruby.css">
     <title>::Ruby::</title>
   </head>
   <body>
@@ -18,7 +19,9 @@
             <li><a href="../../cursos/Csharp/curso-Csharp.html">C#</a></li>
             <li><a href="../../cursos/Java/curso-Java.html">Java</a></li>
             <li><a href="../../cursos/Python/curso-Python.html">Python</a></li>
-
+            <div class="ImagemRuby">
+              <img src="../../../Imagens/ruby.png" alt="Ícones feitos por https://www.flaticon.com/br/autores/pixelmeetup">
+            </div>
           </ul>
         </div>
 
