--- a/paginas/cursos/Python/curso-Python.html
+++ b/paginas/cursos/Python/curso-Python.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viwerport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="../../../Css/Python.css"type="text/css">
     <title>::Python::</title>
   </head>
   <body>
@@ -18,6 +19,10 @@
             <li><a href="../../cursos/Csharp/curso-Csharp.html">C#</a></li>
             <li><a href="../../cursos/Java/curso-Java.html">Java</a></li>
             <li><a href="../../cursos/Ruby/curso-Ruby.html">Ruby</a></li>
+            <div class="Imagempython">
+              <img src="../../../Imagens/Python.png" alt="Ícones feitos por https://www.flaticon.com/br/autores/pixelmeetup">
+            </div>
+
 
           </ul>
         </div>
