Atualização dos links e CSS dos arquivos

--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inicial-scale=1">
     <title>:: JAVA ::</title>
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -11,14 +12,18 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>INICIO</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
 
-    </div>
 
+    <figure id="imgJava">
+        <img src="../../../img/java-logo1.jpg" alt="Imagem Java">
+        <figCaption>História do Java</figCaption>
+    </figure>
+  </div>
   </body>
 </html>
