--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inicial-scale=1">
     <title>:: PYTHON ::</title>
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -11,10 +12,10 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>INICIO</li>
-          <li>Ruby</li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
         </ul>
       </div>
 
