--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,inicial-scale=1">
     <title>:: INICIAL ::</title>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
@@ -18,7 +19,7 @@
         </ul>
       </div>
 
-    </div>
+      </div>
 
   </body>
 </html>
