Atualização da atividade css-exemplo (26/03).

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -6,7 +6,7 @@
     <title>Início</title>
 <style>
   #container {
-      background-color: #1f222b;
+      background-color: #96f9e4;
       margin-left: 15%;
       margin-right: 15%;
       font-family: "Times New Roman";
@@ -15,9 +15,15 @@
   a{
     text-decoration: none;
   }
+  .painel{
+    margin: 0%;
+    height: 450px%;
+    width: 100%;
+  }
 </style>
   </head>
   <body>
+      <img class="painel" src="img/tumblr.jpg" alt="">
     <div id="container">
       <h1>Página inicial</h1>
       <div>
