--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -13,9 +13,9 @@
         <h2>Lista de Cursos</h2>
         <ul>
           <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</li>
-          <li><a href="../python/curso-python.html" target="_blank">Python</li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</li>
+          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
+          <li><a href="../python/curso-python.html" target="_blank">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
         </ul>
       </div>
         <div>
