Atualização nas páginas

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,18 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>:: Início ::</title>
-    <style>
-  #container {
-      background-color: #1f222b;
-      margin-left: 15%;
-      margin-right: 15%;
-      font-family: "Times New Roman";
-      text-decoration-color: #ffffff;
-     }
-         a{
-         text-decoration: none;
-       }
-  </style>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
