--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>C#</title>
-    <link rel="stylesheet" href="../../../css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>:: C# ::</h1>
       <div>
+          <figure>
           <img src="../../../img/csharp.png" alt="Logo  da linguagem de programação C#" id="imgCsharp">
-
+          <figCaption>Historia C#</figCaption>
+          </figure>
           <p id = "histCSharp">C# é uma das linguagens mais importantes para programadores de computadores.
             É um dos primeiros conteúdos que estes profissionais devem aprender para começar a escrever as suas próprias
             linhas de comando. Por definição, a linguagem é voltada a programação orientada a objetos e foi desenvolvida para a Microsoft.</p>
