--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -4,13 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Java</title>
-    <link rel="stylesheet" href="../../../css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>:: Java ::</h1>
       <div>
+        <figure>
           <img src="../../../img/java.png" alt="Logo  da linguagem de programação Java" id="imgJava">
+          <figCaption>Historia Java</figCaption>
+        </figure>
 
             <p id = "histJava">Na atualidade, a maior parte dos aplicativos desenvolvidos para dispositivos móveis é
               desenvolvido em Java, o que faz com que os programadores que dominam essa linguagem sejam profissionais bastante
