--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Python</title>
-    <link rel="stylesheet" href="../../../css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>:: Python ::</h1>
       <div>
+         <figure>
           <img src="../../../img/python.png" alt="Logo  da linguagem de programação Python" id="imgPython">
-
+        <figCaption>Historia Python</figCaption>
+        </figure>
           <p id = "histPython">Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa,
             orientada a objetos, funcional, de tipagem dinâmica e forte</p>
 
