--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -4,14 +4,16 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Ruby</title>
-    <link rel="stylesheet" href="../../../css/estilo.css">
+    <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
     <div id="container">
       <h1>:: Ruby ::</h1>
       <div>
+         <figure>
           <img src="../../../img/ruby.png" alt="Logo  da linguagem de programação Ruby" id="imgRuby">
-
+         <figCaption>Historia Ruby</figCaption>
+         </figure>
           <p id = "histRuby">Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem
             dinâmica e forte, com gerenciamento de memória automático, originalmente planejada e desenvolvida no Japão em 1995,
              por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script.</p>
