Adição da tag figure nas páginas de curso

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -9,8 +9,8 @@
       #container {
         background-color: #1f222b;
         margin: 0 15% 0 15%;
-        font-style: "Times New Roman";
-        color: #ffffff;
+        font-family: "Times New Roman", serif;
+        color: #fff;
       }
 
       a {
