--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -18,9 +18,9 @@
           <li><a href="../ruby/curso-ruby.html">Ruby</li>
         </ul>
       </div>
-      <div>
+      <figure>
         <img src="../../../img/csharp.png" id="imgCsharp" alt="Curso de Csharp" title="csharp"/>
-        <p id="histCsharp">Este é um curso sobre C#</p>
-      </div>
+        <figcaption id="histCsharp">Este é um curso sobre C#</figcaption>
+      </figure>
   </body>
 </html>
