--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -18,9 +18,9 @@
           <li><a href="../ruby/curso-ruby.html">Ruby</li>
         </ul>
       </div>
-      <div>
+      <figure>
         <img src="../../../img/java.png" id="imgJava" alt="Curso de Java" title="java"/>
-        <p id="histCsharp">Este é um curso sobre Java</p>
-      </div>
+        <figcaption id="histCsharp">Este é um curso sobre Java</figcaption>
+      </figure>
   </body>
 </html>
