--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -18,9 +18,9 @@
           <li><a href="../ruby/curso-ruby.html">Ruby</li>
         </ul>
       </div>
-      <div>
+      <figure>
         <img src="../../../img/python.png" id="imgPython" alt="Curso de Python" title="python"/>
-        <p id="histPython">Este é um curso sobre Python</p>
-      </div>
+        <figcaption id="histPython">Este é um curso sobre Python</figcaption>
+      </figure>
   </body>
 </html>
