--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -18,9 +18,9 @@
           <li><a href="../../../pagina-inicial.html">INÍCIO</li>
         </ul>
       </div>
-      <div>
+      <figure>
         <img src="../../../img/ruby.jpg" id="imgRuby" alt="Curso de Ruby" title="ruby"/>
-        <p id="histPython">Este é um curso sobre Ruby</p>
-      </div>
+        <figcaption id="histPython">Este é um curso sobre Ruby</figcaption>
+      </figure>
   </body>
 </html>
