Atualizaçao da pagina inicial e adiçao de arquivos de estilo.css

--- a/paginas/cursos/Csharp/curso-Csharp.html
+++ b/paginas/cursos/Csharp/curso-Csharp.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>:: Csharp ::</title>
+		<link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
 	</head>
 
 	<body>
@@ -20,7 +21,10 @@
         </ul>
       </div>
 
-
+          <figure>
+						<img id="imgjava" src="../../../img/java.jpg" alt="historia do java">
+					   <figcaption>historia do Java</figcaption>
+					 </figure>
 
 		</div>
 	</body>
