--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -5,6 +5,7 @@
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<title>:: INICIO ::</title>
+		<link rel="stylesheet" href="css/estilo.css" type="text/css">
 	</head>
 
 	<body>
