Parte do menu e links finalizadas.

--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -21,8 +21,8 @@
       </div>
 
       <figure>
-        <img id="imgJava" src="../../../img/img_01-logo-java.jpg" alt="Logo da linguagem de programação JAVA">
-        <figcaption>HISTÓRIA DO JAVA</figcaption>
+        <img id="img-csharp" src="../../../img/img_02-logo-csharp.jpg" alt="Logo da linguagem de programação CSHARP">
+        <figcaption>HISTÓRIA DO C#</figcaption>
       </figure>
 
     </div>
