--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -12,12 +12,18 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>INICIO</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>Ruby</li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <figure>
+        <img id="img-java" src="../../../img/img_01-logo-java.jpg" alt="Logo da linguagem de programação JAVA">
+        <figcaption>HISTÓRIA DO JAVA</figcaption>
+      </figure>
+
     </div>
   </body>
 </html>
