--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -12,12 +12,18 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>INICIO</li>
-          <li>Ruby</li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <figure>
+        <img id="img-python" src="../../../img/img_03-logo-python.jpg" alt="Logo da linguagem de programação Python">
+        <figcaption>HISTÓRIA DO PYTHON</figcaption>
+      </figure>
+
     </div>
   </body>
 </html>
