--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -12,12 +12,17 @@
       <div>
         <h2>Lista de Cursos</h2>
         <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>Python</li>
-          <li>INICIO</li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
         </ul>
       </div>
+
+      <figure>
+        <img id="img-ruby" src="../../../img/img_04-logo-ruby.jpg" alt="Logo da linguagem de programação Ruby">
+        <figcaption>HISTÓRIA DO RUBY</figcaption>
+      </figure>
     </div>
   </body>
 </html>
