Atualizações dos elementos de estilização com CSS.

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -8,16 +8,15 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página::INICIAL::</h1>
-
-      <h2>Lista de Cursos</h2>
-      <ul>
-        <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
-        <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
-        <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
-        <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
-      </ul>
+      <div class="menu-box">
+        <ul class="menu-horizontal">
+          <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
+          <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
+          <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
+          <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
+      </div>
+      <h1 class="titulo-pag">Página::INICIAL::</h1>
     </div>
-
   </body>
 </html>
