--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -8,18 +8,19 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página::C#::</h1>
-      <h2>Lista de Cursos</h2>
-      <ul>
-        <li><a href="../java/curso-java.html">Java</a></li>
-        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
-        <li><a href="../python/curso-python.html">Python</a></li>
-        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-      </ul>
+      <div class="menu-box">
+        <ul class="menu-horizontal">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
+      </div>
+      <h1 class="titulo-pag">Página::C#::</h1>
+      <figure>
+        <img id="imgCsharp" src="../../../img/c-sharp-logo.png" alt="Logo da linguagem de programação C#">
+        <figcaption>História do C#</figcaption>
+      </figure>
     </div>
-    <figure>
-      <img id="imgCsharp" src="../../../img/c-sharp-logo.png" alt="Logo da linguagem de programação C#">
-      <figcaption>História do C#</figcaption>
-    </figure>
   </body>
 </html>
