--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -8,14 +8,19 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página::JAVA::</h1>
-      <h2>Lista de Cursos</h2>
-      <ul>
-        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
-        <li><a href="../csharp/curso-csharp.html">C#</a></li>
-        <li><a href="../python/curso-python.html">Python</a></li>
-        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-      </ul>
+      <div class="menu-box">
+        <ul class="menu-horizontal">
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
+      </div>
+      <h1 class="titulo-pag">Página::JAVA::</h1>
+      <figure>
+        <img id="imgJava" src="../../../img/java-logo.jpg" alt="Logo da linguagem de programação Java">
+        <figcaption>História do Java</figcaption>
+      </figure>
     </div>
   </body>
 </html>
