--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -8,14 +8,19 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página::PYTHON::</h1>
-      <h2>Lista de Cursos</h2>
-      <ul>
-        <li><a href="../java/curso-java.html">Java</a></li>
-        <li><a href="../csharp/curso-csharp.html">C#</a></li>
-        <li><a href="../../../pagina-inicial.html">INICIO</a></li>
-        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-      </ul>
+      <div class="menu-box">
+        <ul class="menu-horizontal">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../../../pagina-inicial.html">INICIO</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+        </ul>
+      </div>
+      <h1 class="titulo-pag">Página::PYTHON::</h1>
+      <figure>
+        <img id="imgPython" src="../../../img/python-logo.png" alt="Logo da linguagem de programação Python">
+        <figcaption>História do Python</figcaption>
+      </figure>
     </div>
   </body>
 </html>
