Projeto finalizado, sem centralização das imagens!

--- a/Paginas/Cursos/Csharp/curso-csharp.html
+++ b/Paginas/Cursos/Csharp/curso-csharp.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: C# ::</h1>
-    </div>
-
-
-
-    <div class="img">
-      <img src="../../../img/Csharp.jpg">
-    </div>
-
-    <a href="../../../pagina-inicial.html">Voltar</a>
-
-
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../Java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../Python/curso-python.html">Python</a></li>
+          <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
+          </ul>
+      </div>
+      <h1 class="tit-pag">Página :: C# ::</h1>
+      <figure class="img-box">
+        <img id="imgCsharp" src="../../../img/Csharp.jpg" alt="Logo da linguagem de programação C#">
+        <figcaption>História do C#</figcaption>
+      </figure>
   </body>
 </html>
