--- a/Paginas/Cursos/Java/curso-java.html
+++ b/Paginas/Cursos/Java/curso-java.html
@@ -8,18 +8,16 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: JAVA ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="../Java/curso-java.html">Java</a></li>
           <li><a href="../Csharp/curso-csharp.html">C#</a></li>
           <li><a href="../Python/curso-python.html">Python</a></li>
           <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
           </ul>
       </div>
-
-      <figure>
+      <h1 class="tit-pag">Página :: JAVA ::</h1>
+      <figure class="img-box">
         <img id="imgJava" src="../../../img/java.jpg" alt="Logo da lnguagem de programação Java">
         <figcaption>História do Java</figcaption>
       </figure>
