--- a/Paginas/Cursos/Python/curso-python.html
+++ b/Paginas/Cursos/Python/curso-python.html
@@ -8,15 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: PYTHON ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li>Java</li>
-          <li>C#</li>
-          <li>INICIO</li>
-          <li>Ruby</li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../Java/curso-java.html">Java</a></li>
+          <li><a href="../Csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../Python/curso-python.html">Python</a></li>
+          <li><a href="../Ruby/curso-ruby.html">Ruby</a></li>
           </ul>
       </div>
+      <h1 class="tit-pag">Página :: PYTHON ::</h1>
+      <figure class="img-box">
+        <img id="imgPython" src="../../../img/python.jpg" alt="Logo da lnguagem de programação Python">
+        <figcaption>História do Python</figcaption>
+      </figure>
   </body>
 </html>
