--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -8,16 +8,15 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: INICIAL ::</h1>
-
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="Paginas/Cursos/Java/curso-java.html">Java</a></li>
           <li><a href="Paginas/Cursos/Csharp/curso-csharp.html">C#</a></li>
           <li><a href="Paginas/Cursos/Python/curso-python.html">Python</a></li>
           <li><a href="Paginas/Cursos/Ruby/curso-ruby.html">Ruby</a></li>
           </ul>
       </div>
+      <h1 class="tit-pag">Página :: INICIAL ::</h1>
+    </div>
   </body>
 </html>
