--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -3,34 +3,22 @@
   <head>
     <meta name = "viewport" content = "width=device-width, initial scale = 1">
     <meta charset="utf-8">
+    <link rel="stylesheet" href="css/estilo.css">
     <title>.: INÍCIO :.</title>
-	
-	<style>
-		#container{
-			background-color: #1F222B;
-			margin-left: 15%;
-			margin-right: 15%;
-			font-family: "Times New Roman", "";
-			color:#FFFFFF;
-		}
-		
-		a{
-			text-decoration:none;
-		}
-	</style>
-	
   </head>
   <body>
     <div id ="container">
-      <h1>Página :: INCIAL ::</h1>
-      <div>
-        <h2>Lista de Cursos:</h2>
-        <ul>
+
+      <div class="menu-box">
+
+        <ul class="menu-horiz">
           <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
           <li><a href="paginas/cursos/c-sharp/curso-csharp.html">C#</a></li>
           <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
           <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
+
+        <h1 class="tit-pagina">.:PÁGINA INICIAL:.</h1>
       </div>
     </div>
   </body>
