--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -8,9 +8,17 @@
   </head>
   <body>
     <div id ="container">
-      <h1>Página :: JAVA ::</h1>
+      <h2>Lista de Cursos:</h2>
+      <ul class="menu-horiz">
+        <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
+        <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
+        <li><a href="../python/curso-python.html">Python</a></li>
+        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+      </ul>
+
+      <h1 class="tit-pagina">Página :: JAVA ::</h1>
       <div>
-        <figure>
+        <figure class="img-box">
             	<img id = "imgJava" src="../../../img/java.png" alt="Símbolo da linguagem de programação Java">
             <figcaption>HISTÓRIA DO JAVA</figcaption>
         </figure>
@@ -23,13 +31,6 @@
 		único sistema operacional ou hardware, pois seus programas rodam através de uma máquina virtual que pode ser emulada em qualquer sistema que suporte a
 		linguagem C++
 		</p>
-        <h2>Lista de Cursos:</h2>
-        <ul>
-          <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
-          <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
-          <li><a href="../python/curso-python.html">Python</a></li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-        </ul>
       </div>
     </div>
   </body>
