--- a/paginas/cursos/c-sharp/curso-csharp.html
+++ b/paginas/cursos/c-sharp/curso-csharp.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <div id ="container">
-      <h1>Página :: C# ::</h1>
+
+      <h2>Lista de Cursos:</h2>
+          <ul class="menu-horiz">
+            <li><a href="../java/curso-java.html">Java</a></li>
+            <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
+            <li><a href="../python/curso-python.html">Python</a></li>
+            <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+          </ul>
+
+      <h1 class="tit-pagina">Página :: C# ::</h1>
       <div>
         <figure>
             <img id = "imgCSharp" src="../../../img/csharp.jpg" alt="Símbolo da linguagem de programação C#">
@@ -22,13 +31,7 @@
 		projetadas para funcionar na Common Language Infrastructure da plataforma .NET Framework.
 		</p>
 
-		<h2>Lista de Cursos:</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</a></li>
-          <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
-          <li><a href="../python/curso-python.html">Python</a></li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-        </ul>
+
       </div>
 
 
