--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -8,7 +8,16 @@
   </head>
   <body>
     <div id ="container">
-      <h1>Página :: PYTHON ::</h1>
+
+      <h2>Lista de Cursos:</h2>
+      <ul class="menu-horiz">
+        <li><a href="../java/curso-java.html">Java</a></li>
+        <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
+        <li><a href = "../../../pagina-inicial.html">Página Inicial</a></li>
+        <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+      </ul>
+
+      <h1 class="tit-pagina">Página :: PYTHON ::</h1>
       <div>
         <figure>
             	<img id = "imgPython" src="../../../img/python.png" alt="Símbolo da linguagem de programação Python">
@@ -22,13 +31,7 @@
 		lucrativos Python Software Foundation. Apesar de várias partes da linguagem possuírem padrões e especificações formais, a linguagem como um todo não é
 		formalmente especificada. O padrão de facto é a implementação CPython.
 		</p>
-        <h2>Lista de Cursos:</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</a></li>
-          <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
-          <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
-        </ul>
+
       </div>
     </div>
   </body>
