--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -8,8 +8,19 @@
   </head>
   <body>
     <div id ="container">
-      <h1>Página :: RUBY ::</h1>
+
       <div>
+
+        <h2>Lista de Cursos:</h2>
+        <ul class="menu-horiz">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href = "../../../pagina-inicial.html">Página Inicial</a></li>
+        </ul>
+
+          <h1 class="tit-pagina">Página :: RUBY ::</h1>
+
         <figure>
             <img id = "imgRuby" src="../../../img/ruby.png" alt="Símbolo da linguagem de programação Ruby">
             <figcaption>HISTÓRIA DO RUBY</figcaption>
@@ -23,13 +34,7 @@
 		reflexiva. Foi inspirada principalmente por Python, Perl, Smalltalk, Eiffel, Ada e Lisp, sendo muito similar em vários aspectos a Python. Ruby está
 		entre as 10 linguagens mais populares, de acordo com uma pesquisa conduzida pela RedMonk.
 		</p>
-        <h2>Lista de Cursos:</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</a></li>
-          <li><a href="../c-sharp/curso-csharp.html">C#</a></li>
-          <li><a href="../python/curso-python.html">Python</a></li>
-          <li><a href = "../../../pagina-inicial.html">Página Inicial</li>
-        </ul>
+
       </div>
     </div>
   </body>
