--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -8,16 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>:: INÍCIO ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
           <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
           <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
           <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <h1 class="tit-pag">:: INÍCIO ::</h1>
+
     </div>
   </body>
 </html>
