--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -7,25 +7,27 @@
     <link rel="stylesheet" href="../../../css/estilo.css" type="text/css">
   </head>
   <body>
-    <div id="container">
-      <h1>:: C# ::</h1>
-      <div>
-          <figure>
-          <img src="../../../img/csharp.png" alt="Logo  da linguagem de programação C#" id="imgCsharp">
-          <figCaption>Historia C#</figCaption>
-          </figure>
-          <p id = "histCSharp">C# é uma das linguagens mais importantes para programadores de computadores.
-            É um dos primeiros conteúdos que estes profissionais devem aprender para começar a escrever as suas próprias
-            linhas de comando. Por definição, a linguagem é voltada a programação orientada a objetos e foi desenvolvida para a Microsoft.</p>
 
-          <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</a></li>
+    <div id="container">
+
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="../../../pagina-inicial.html">Início</li>
+          <li><a href="../java/curso-java.html">Java</a></li>
           <li><a href="../python/curso-python.html">Python</li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <h1 class="tit-pag">:: C# ::</h1>
+       <figure class='img-box'>
+           <img src="../../../img/csharp.png" alt="Logo  da linguagem de programação C#" id="imgCsharp">
+           <figCaption>Historia C#</figCaption>
+      </figure>
+            <p id = "histCSharp">C# é uma das linguagens mais importantes para programadores de computadores.
+             É um dos primeiros conteúdos que estes profissionais devem aprender para começar a escrever as suas próprias
+             linhas de comando. Por definição, a linguagem é voltada a programação orientada a objetos e foi desenvolvida para a Microsoft.</p>
+
     </div>
   </body>
 </html>
