--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -8,23 +8,24 @@
   </head>
   <body>
     <div id="container">
-      <h1>:: Python ::</h1>
-      <div>
-         <figure>
-          <img src="../../../img/python.png" alt="Logo  da linguagem de programação Python" id="imgPython">
-        <figCaption>Historia Python</figCaption>
-        </figure>
-          <p id = "histPython">Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa,
-            orientada a objetos, funcional, de tipagem dinâmica e forte</p>
 
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../../../pagina-inicial.html">Início</a></li>
           <li><a href="../java/curso-java.html">Java</a></li>
           <li><a href="../csharp/curso-csharp.html">C#</a></li>
-          <li><a href="../../../pagina-inicial.html">Início</a></li>
           <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <h1 class="tit-pag">:: Python ::</h1>
+        <figure class='img-box'>
+          <img src="../../../img/python.png" alt="Logo  da linguagem de programação Python" id="imgPython">
+          <figCaption>Historia Python</figCaption>
+        </figure>
+        <p id = "histPython">Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa,
+          orientada a objetos, funcional, de tipagem dinâmica e forte</p>
+
     </div>
   </body>
 </html>
