--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -8,11 +8,9 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: C# ::</h1>
 
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="../java/curso-java.html">Java</a></li>
           <li><a href="../../../pagina-inicial.html">INICIO</a></li>
           <li><a href="../python/curso-python.html">Python</a></li>
@@ -20,7 +18,9 @@
         </ul>
       </div>
 
-      <figure>
+      <h1 class="tit-pag">Página :: C# ::</h1>
+
+      <figure class="img-box">
         <img id="img-csharp" src="../../../img/img_02-logo-csharp.jpg" alt="Logo da linguagem de programação CSHARP">
         <figcaption>HISTÓRIA DO C#</figcaption>
       </figure>
