--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: JAVA  ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="../csharp/curso-csharp.html">C#</a></li>
           <li><a href="../../../pagina-inicial.html">INICIO</a></li>
           <li><a href="../python/curso-python.html">Python</a></li>
@@ -19,7 +17,9 @@
         </ul>
       </div>
 
-      <figure>
+      <h1 class="tit-pag">Página :: JAVA  ::</h1>
+
+      <figure class="img-box">
         <img id="img-java" src="../../../img/img_01-logo-java.jpg" alt="Logo da linguagem de programação JAVA">
         <figcaption>HISTÓRIA DO JAVA</figcaption>
       </figure>
