--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -8,10 +8,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: PYTHON ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a href="../csharp/curso-csharp.html">C#</a></li>
           <li><a href="../../../pagina-inicial.html">INICIO</a></li>
           <li><a href="../java/curso-java.html">Java</a></li>
@@ -19,7 +17,9 @@
         </ul>
       </div>
 
-      <figure>
+      <h1 class="tit-pag">Página :: PYTHON ::</h1>
+
+      <figure class="img-box">
         <img id="img-python" src="../../../img/img_03-logo-python.jpg" alt="Logo da linguagem de programação Python">
         <figcaption>HISTÓRIA DO PYTHON</figcaption>
       </figure>
