Criação de menu horizontal, adição de estilos e conserto de tags <a>

--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -2,34 +2,23 @@
 <html lang="pt-br" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1"
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" type="text/css" href="../../../css/estilo.css">
     <title>::: INÍCIO :::</title>
-    <style>
-
-      #container {
-        background-color: #1f222b;
-        margin: 0 15% 0 15%;
-        font-family: "Times New Roman", serif;
-        color: #fff;
-      }
-
-      a {
-        text-decoration: none;
-      }
-
-    </style>
   </head>
   <body>
     <div id="container">
-      <h1>Página :: INICIAL ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="paginas/cursos/java/curso-java.html">Java</li>
-          <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</li>
-          <li><a href="paginas/cursos/python/curso-python.html">Python</li>
-          <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</li>
+
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
+          <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
+          <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
+          <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+    <h1 class="tit-pag">Página :: INICIAL ::</h1>
+
   </body>
 </html>
