--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: C# ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</li>
-          <li><a href="../../../pagina-inicial.html">INÍCIO</li>
-          <li><a href="../python/curso-python.html">Python</li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../../../pagina-inicial.html">INÍCIO</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
-      <figure>
+
+      <h1 class="tit-pag">Página :: C# ::</h1>
+
+      <figure class="img-box">
         <img src="../../../img/csharp.png" id="imgCsharp" alt="Curso de Csharp" title="csharp"/>
         <figcaption id="histCsharp">Este é um curso sobre C#</figcaption>
       </figure>
