--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: JAVA ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../../../pagina-inicial.html">INÍCIO</li>
-          <li><a href="../csharp/curso-csharp.html">C#</li>
-          <li><a href="../python/curso-python.html">Python</li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../../../pagina-inicial.html">INÍCIO</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
-      <figure>
+
+      <h1 class="tit-pag">Página :: JAVA ::</h1>
+
+      <figure class="img-box">
         <img src="../../../img/java.png" id="imgJava" alt="Curso de Java" title="java"/>
         <figcaption id="histCsharp">Este é um curso sobre Java</figcaption>
       </figure>
