--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: PYTHON ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</li>
-          <li><a href="../csharp/curso-csharp.html">C#</li>
-          <li><a href="../../../pagina-inicial.html">INÍCIO</li>
-          <li><a href="../ruby/curso-ruby.html">Ruby</li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../../../pagina-inicial.html">INÍCIO</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
-      <figure>
+
+      <h1 class="tit-pag">Página :: PYTHON ::</h1>
+
+      <figure class="img-box">
         <img src="../../../img/python.png" id="imgPython" alt="Curso de Python" title="python"/>
         <figcaption id="histPython">Este é um curso sobre Python</figcaption>
       </figure>
