--- a/paginas/cursos/ruby/curso-ruby.html
+++ b/paginas/cursos/ruby/curso-ruby.html
@@ -8,17 +8,18 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página :: RUBY ::</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../java/curso-java.html">Java</li>
-          <li><a href="../csharp/curso-csharp.html">C#</li>
-          <li><a href="../python/curso-python.html">Python</li>
-          <li><a href="../../../pagina-inicial.html">INÍCIO</li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
+          <li><a href="../../../pagina-inicial.html">INÍCIO</a></li>
         </ul>
       </div>
-      <figure>
+
+      <h1 class="tit-pag">Página :: RUBY ::</h1>
+
+      <figure class="img-box">
         <img src="../../../img/ruby.jpg" id="imgRuby" alt="Curso de Ruby" title="ruby"/>
         <figcaption id="histPython">Este é um curso sobre Ruby</figcaption>
       </figure>
