Atualização da página css-exemplo (27.03)

--- a/paginas/cursos/python/curso-python.html
+++ b/paginas/cursos/python/curso-python.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
+      <img src="../../../img/tumblr2.jpg" id="foto">
     <div id="container">
-      <h1>Página Python</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <ul>
+            <li><a href="../../../pagina-inicial.html">Início</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
       <div>
         <img src="../../../img/python.png" alt="Imagem de demonstração do slogan do Python" id="imgPython">
       </div>
+      <h1>Página Python</h1>
     </div>
   </body>
 </html>
