--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -4,37 +4,22 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Início</title>
-<style>
-  #container {
-      background-color: #96f9e4;
-      margin-left: 15%;
-      margin-right: 15%;
-      font-family: "Times New Roman";
-      text-decoration-color: #ffffff;
-  }
-  a{
-    text-decoration: none;
-  }
-  .painel{
-    margin: 0%;
-    height: 450px%;
-    width: 100%;
-  }
-</style>
+    <link rel="stylesheet" href="css/estilo.css" type="text/css">
   </head>
   <body>
-      <img class="painel" src="img/tumblr.jpg" alt="">
+      <img src="img/tumblr2.jpg" id="foto">
     <div id="container">
-      <h1>Página inicial</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="paginas/cursos/java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="paginas/cursos/csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="paginas/cursos/python/curso-python.html" target="_blank">Python</a></li>
-          <li><a href="paginas/cursos/ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a href="paginas/cursos/java/curso-java.html">Java</a></li>
+          <li><a href="paginas/cursos/csharp/curso-csharp.html">C#</a></li>
+          <li><a href="paginas/cursos/python/curso-python.html">Python</a></li>
+          <li><a href="paginas/cursos/ruby/curso-ruby.html">Ruby</a></li>
         </ul>
       </div>
+
+      <h1 class="tit-pag">Página inicial</h1>
+
     </div>
   </body>
 </html>
