--- a/paginas/cursos/csharp/curso-csharp.html
+++ b/paginas/cursos/csharp/curso-csharp.html
@@ -7,20 +7,21 @@
     <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
-    <div id="container">
-      <h1>Página C#</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
+    <img src="../../../img/tumblr2.jpg" id="foto">
+  <div id="container">
+    <div class="menu-box">
+      <ul class="menu-horiz">
         <ul>
-          <li><a href="../java/curso-java.html" target="_blank">Java</a></li>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
-          <li><a href="../python/curso-python.html" target="_blank">Python</a></li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+          <li><a href="../../../pagina-inicial.html">Início</a></li>
+          <li><a href="../java/curso-java.html">Java</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
         </ul>
       </div>
         <div>
-          <img src="../../../img/csharp.jpg" alt="Imagem de demonstração do slogan do C#" id="imgC#">
+          <img src="../../../img/csharp.jpg" alt="Imagem de demonstração do slogan do C#" id="imgC">
         </div>
+        <h1>Página C#</h1>
     </div>
   </body>
 </html>
