--- a/paginas/cursos/java/curso-java.html
+++ b/paginas/cursos/java/curso-java.html
@@ -7,20 +7,20 @@
     <link rel="stylesheet" href="../../../css/estilo.css">
   </head>
   <body>
-    <div id="container">
-      <h1>Página Java</h1>
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a href="../../../pagina-inicial.html" target="_blank">Início</a></li>
-          <li><a href="../csharp/curso-csharp.html" target="_blank">C#</a></li>
-          <li><a href="../python/curso-python.html" target="_blank">Python</a></li>
-          <li><a href="../ruby/curso-ruby.html" target="_blank">Ruby</a></li>
+    <img src="../../../img/tumblr2.jpg" id="foto">
+  <div id="container">
+    <div class="menu-box">
+      <ul class="menu-horiz">
+          <li><a href="../../../pagina-inicial.html">Início</a></li>
+          <li><a href="../csharp/curso-csharp.html">C#</a></li>
+          <li><a href="../ruby/curso-ruby.html">Ruby</a></li>
+          <li><a href="../python/curso-python.html">Python</a></li>
         </ul>
       </div>
       <div>
         <img src="../../../img/java.jpeg" alt="Imagem de demonstração do slogan do Java" id="imgJava">
       </div>
+      <h1>Página Java</h1>
     </div>
   </body>
 </html>
