Página atualizada com o menu de barra e bordas arredondadas

--- a/paginas/cursos/CSharp/curso-csharp.html
+++ b/paginas/cursos/CSharp/curso-csharp.html
@@ -14,22 +14,21 @@
   </head>
   <body>
     <div id="container">
-      <div id = 'menu'>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
           <li><a  href='../Java/curso-java.html'>Java</a></li>
           <li><a  href='../Python/curso-python.html'>Python</a></li>
           <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
-        <div class="img">
-            <figure>
-          <hr><img id ="img_csharp" src="../../../img/img_csharp.png" alt="Logo da linguagem C#">
-        </figure>
-        </div>
-        <div id="histcsharp">
-          <p>C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java.</p>
-        </div>
+      </div>
+      <div class="img">
+          <figure>
+            <center><img id ="img_csharp" src="../../../img/img_csharp.png" alt="Logo da linguagem C#"></center>
+          </figure>
+      </div>
+      <div id="history">
+        <p>C# é uma linguagem de programação, multiparadigma, de tipagem forte, desenvolvida pela Microsoft como parte da plataforma .NET. A sua sintaxe orientada a objetos foi baseada no C++ mas inclui muitas influências de outras linguagens de programação, como Object Pascal e, principalmente, Java.</p>
       </div>
     </div>
   </body>
