--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -15,20 +15,21 @@
   <body>
     <div id="container">
       <div id = 'menu'>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
-          <li><a  href='../Java/curso-java.html'>Java</a></li>
-          <li><a  href='../CSharp/curso-csharp.html'>C#</a></li>
-          <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
-        </ul>
+        <div class="menu-box">
+          <ul class="menu-horiz">
+            <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
+            <li><a  href='../Java/curso-java.html'>Java</a></li>
+            <li><a  href='../CSharp/curso-csharp.html'>C#</a></li>
+            <li><a  href='../Ruby/curso-ruby.html'>Ruby</a></li>
+          </ul>
+        </div>
       </div>
       <div class="img">
-          <hr><img id = 'img_python' src="../../../img/img_python.png" alt="logo da linguagem Python">
+        <center><img id = 'img_python' src="../../../img/img_python.png" alt="logo da linguagem Python"></center>
       </div>
-    <div id="histpython">
-      <p> Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte. Foi lançada por Guido van Rossum em 1991.</p>
-    </div>
+      <div id="history">
+        <p> Python é uma linguagem de programação de alto nível, interpretada, de script, imperativa, orientada a objetos, funcional, de tipagem dinâmica e forte. Foi lançada por Guido van Rossum em 1991.</p>
+      </div>
     </div>
   </body>
 </html>
