--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -15,18 +15,19 @@
   <body>
     <div id="container">
       <div id = 'menu'>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
-          <li><a  href='../Java/curso-java.html'>Java</a></li>
-          <li><a  href='../CSharp/curso-csharp.html'>C#</a></li>
-          <li><a  href='../Python/curso-python.html'>Python</a></li>
-        </ul>
+        <div class="menu-box">
+          <ul class="menu-horiz">
+            <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
+            <li><a  href='../Java/curso-java.html'>Java</a></li>
+            <li><a  href='../CSharp/curso-csharp.html'>C#</a></li>
+            <li><a  href='../Python/curso-python.html'>Python</a></li>
+          </ul>
+        </div>
       </div>
       <div class="img">
-          <hr><img id = 'img_ruby' src="../../../img/img_ruby.png" alt="logo da lingauegm ruby">
+        <center><img id = 'img_ruby' src="../../../img/img_ruby.png" alt="logo da lingauegm ruby"></center>
       </div>
-      <div id="histruby">
+      <div id="history">
         <p>Ruby é uma linguagem de programação interpretada multiparadigma, de tipagem dinâmica e forte, com gerenciamento de memória automático, originalmente planejada e desenvolvida no Japão em 1995, por Yukihiro "Matz" Matsumoto, para ser usada como linguagem de script.</p>
       </div>
     </div>
