--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -5,35 +5,18 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>.: INICIO :.</title>
-    <style>
-      #container{
-        background-color: #1F223B;
-        margin-left: 15%;
-        margin-right: 15%;;
-        font-family: 'Times New Roman';
-        color = ghostwhite;
-      }
-      a{
-        text-decoration: none;
-        color: ghostwhite;
-      }
-
-
-
-    </style>
   </head>
   <body>
     <div id="container">
-      <div>
-        <h2>Lista de Cursos</h2>
-        <ul>
-          <li><a  href='paginas/cursos/java/curso-java.html'>Java</a></li>
+      <div class="menu-box">
+        <ul class="menu-horiz">
+          <li><a  href='paginas/cursos/java/curso-java.html'   >Java</a></li>
           <li><a  href='paginas/cursos/CSharp/curso-csharp.html'>C#</a></li>
           <li><a  href='paginas/cursos/Python/curso-python.html'>Python</a></li>
           <li><a  href='paginas/cursos/Ruby/curso-ruby.html'>Ruby</a></li>
         </ul>
-        <hr>
       </div>
+      <h1 class="tit-pag">.:: Página Inicial ::.</h1>
     </div>
   </body>
 </html>
