--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -14,9 +14,8 @@
   </head>
   <body>
     <div id="container">
-      <div id = 'menu'>
-        <h2>Lista de Cursos</h2>
-        <ul>
+      <div class="menu-box">
+        <ul class="menu-horiz">
           <li><a  href='../../../pagina-inicial.html'>Inicial</a></li>
           <li><a  href='../CSharp/curso-csharp.html'>C#</a></li>
           <li><a  href='../Python/curso-python.html'>Python</a></li>
@@ -25,13 +24,11 @@
       </div>
       <div class="img">
         <figure>
-          <img id = 'img_java' src="../../../img/img_java.png" alt="Logo da linguagem java">
-
-          <br>
+          <center><img id = 'img_java' src="../../../img/img_java.png" alt="Logo da linguagem java"></center>
           <figurecaption id="historia">História do java</figurecaption>
         </figure>
       </div>
-      <div id="histjava">
+      <div id="history">
         <p>Java é uma linguagem de programação orientada a objetos desenvolvida na década de 90 por uma equipe de programadores chefiada por James Gosling, na empresa Sun Microsystems.</p>
       </div>
     </div>
