--- a/pagina-inicial.html
+++ b/pagina-inicial.html
@@ -7,19 +7,18 @@
     <link rel="stylesheet" href="css/global-style.css">
   </head>
   <body>
-    <div id="container" class="cor-preto texto-sublinhado">
-      <h1>Página - INÍCIO</h1>
+    <div id="container">
+      <div class="menu-box">
+        <div class="menu">
+          <ul>
+            <li> <a href="paginas/cursos/csharp/curso-csharp.html"> C# </a></li>
+            <li> <a href="paginas/cursos/java/curso-java.html"> Java</a></li>
+            <li> <a href="paginas/cursos/python/curso-python.html"> Python </a></li>
+            <li> <a href="paginas/cursos/ruby/curso-ruby.html"> Ruby</a></li>
+          </ul>
+        </div>
+      </div>
+      <h1 class="title">Página - INÍCIO</h1>
     </div>
-
-    <div class="menu">
-      <h2>Lista de Cursos</h2>
-      <ul>
-        <li> <a href="paginas/cursos/csharp/curso-csharp.html"> C# </a></li>
-        <li> <a href="paginas/cursos/java/curso-java.html"> Java</a></li>
-        <li> <a href="paginas/cursos/python/curso-python.html"> Python </a></li>
-        <li> <a href="paginas/cursos/ruby/curso-ruby.html"> Ruby</a></li>
-      </ul>
-    </div>
-
   </body>
 </html>
