--- a/paginas/cursos/Csharp/curso-csharp.html
+++ b/paginas/cursos/Csharp/curso-csharp.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página - C#</h1>
-    </div>
+      <h1 class="title">Página - C#</h1>
+    
 
     <figure class="img-csharp">
       <img src="../../../img/c-sharplogo.png" id="img-csharp" alt="Logo C#" />
@@ -24,5 +24,6 @@
     <div class="voltar">
       <a href="../../../pagina-inicial.html" id="voltar">Voltar</a>
     </div>
+  </div>
   </body>
 </html>
