--- a/paginas/cursos/Java/curso-java.html
+++ b/paginas/cursos/Java/curso-java.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página - JAVA</h1>
-    </div>
+      <h1 class="title">Página - JAVA</h1>
+    
 
     <figure class="img-java">
       <img src="../../../img/java.jpg" id="img-java" alt="Logo Java"  />
@@ -24,5 +24,6 @@
     <div class="voltar">
         <a href="../../../pagina-inicial.html" id="voltar">Voltar</a>
       </div>
+    </div>
   </body>
 </html>
