--- a/paginas/cursos/Python/curso-python.html
+++ b/paginas/cursos/Python/curso-python.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página - PYTHON  </h1>
-    </div>
+      <h1 class="title">Página - PYTHON  </h1>
+    
 
     <figure class="img-python">
       <img src="../../../img/pythonlogo.png" id="img-python" alt="Logo Python" >
@@ -26,6 +26,7 @@
     <div class="voltar">
         <a href="../../../pagina-inicial.html" id="voltar">Voltar</a>
       </div>
+    </div>
 
   </body>
 </html>
