--- a/paginas/cursos/Ruby/curso-ruby.html
+++ b/paginas/cursos/Ruby/curso-ruby.html
@@ -8,8 +8,8 @@
   </head>
   <body>
     <div id="container">
-      <h1>Página - RUBY</h1>
-    </div>
+      <h1 class="title">Página - RUBY</h1>
+   
 
     <figure class="img-ruby">
       <img src="../../../img/rubylogo.jpg" id="img-ruby" alt="Logo Ruby"  />
@@ -28,7 +28,7 @@
     <div class="voltar">
         <a href="../../../pagina-inicial.html" id="voltar">Voltar</a>
       </div>
-
+    </div>
     
 
   </body>
